# dockwright

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml  setup.sh
deploy/: loops-registry.md  settings.snippet.json  statusline-command.sh
deploy/agents/: manager.core.md  vars.defaults.toml  worker.core.md
deploy/commands/: dockwright-fix.md  dockwright-general-work.md  dockwright-threads.md  manager-assign.md  manager-close.md  manager-reboot.md  manager.md  (+5 more)
evals/: README.md  __init__.py  observability.py  render_results.py  run_eval.py  scoring.py  verifier.py
scripts/: integration-test.sh
tests/: carve_helpers.py  conftest.py  stat_shims.py  test_account_validation.py  test_accounts_sync.py  test_agent_size_ceiling.py  test_asset_validator.py  test_boot_brief.py  test_bootlite_watchdog.py  test_bootstrap_recreate_guard.py  test_canon_edit_guard.py  test_codex_skills.py  test_command_files.py  test_compose.py  test_compose_cli.py  test_compose_equivalence.py  test_config.py  test_config_consumers.py  test_distill_cli.py  test_dlq_cookie_refresh.bats  test_doctor.py  test_ensure_worker_home.py  test_env_install.py  test_env_subcommands_dispatch.py  test_finalize_presets.py  test_frontier_gate.py  test_gardener_apply.py  test_gardener_eval_gate.py  test_gardener_gate.py  test_gardener_install_lane.py  test_gardener_postrun.py  test_gardener_run_tmux.py  test_gardener_spend.py  test_headless_tool_lockdown.py  test_homebrew_cleanup.py  test_hooks.py  test_identity.py  test_import_graph.py  test_init_config.py  test_loops_registry.py  (+53 more)
(+160 files in other folders)
