[project]
name = "dockwright"
version = "1.1.0"
description = "Orchestrate Claude Code and Codex worker sessions across tmux windows"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyfakefs>=5.0",
]

[project.scripts]
dockwright = "dockwright.__main__:main"
# DEPRECATED one-release alias — removed next release (see CHANGELOG rider)
orchestrator = "dockwright.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Prepend THIS (work)tree's src to sys.path so bare `pytest` from the repo root
# resolves dockwright to this tree — not a sibling/main checkout's
# editable install. Kills both the per-worker "PYTHONPATH=src" rediscovery and
# the worktree false-green where tests silently import stale main-repo source.
pythonpath = ["src"]
testpaths = ["tests", "evals/tests"]
markers = [
    "real_tmux: test genuinely drives a real tmux server on a throwaway socket (see the real_tmux fixture); no_live_tmux delegates to the real binary but the live-socket/mgr guard stays armed.",
]

